--- a/README
+++ b/README
@@ -20,9 +20,9 @@ If you don't feel like installing Java or the compiler, just run:
 
         make debug
 
-If you don't feel like installing Make, run:
+If you don't feel like installing make, run:
 
-        cat background.js >background.min.js
+        cp background.js background.min.js
         cat chrome_ex_oauthsimple.js chrome_ex_oauth.js >chrome_ex_oauth.min.js
 
 If you're on Windows, I don't know what to tell you.
